# 2pg

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
tests/benchmarks/agent/maximin/: test_alpha_beta.py  test_naive.py
two_player_games/: __init__.py  __main__.py  common.py  presenter.py
two_player_games/agent/: __init__.py  arg.py  random.py
two_player_games/agent/human/: __init__.py
two_player_games/agent/human/board/: __init__.py  horizontal.py  vertical.py
two_player_games/agent/minimax/: __init__.py  alpha_beta_pruning.py  defensive.py  naive.py  stochastic.py
two_player_games/config/: __init__.py
two_player_games/config/board/: __init__.py  connect4.py  othelo.py  tic_tac_toe.py
two_player_games/model/: __init__.py  arg.py
two_player_games/model/board/: __init__.py
two_player_games/model/board/horizontal/: __init__.py  othello.py  tic_tac_toe.py
two_player_games/model/board/vertical/: __init__.py  connect4.py
two_player_games/view/: __init__.py  arg.py  hidden.py
two_player_games/view/pygame/: __init__.py  board.py
